dart/cpp/public/filament-dart.h

typedef struct Camera *CameraRef;
typedef struct Engine *EngineRef;
typedef struct EntityManager *EntityManagerRef;
typedef struct Renderer *RendererRef;
typedef struct SwapChain *SwapChainRef;
typedef struct View *ViewRef;
///
/// Memory helpers
///
void* filament_allocate(long long bytes);
void filament_free(void* ptr);
///
/// Engine
///
EngineRef filament_create_engine(int backend);
void filament_destroy_engine(EngineRef instance);
int filament_engine_get_backend(EngineRef instance);
void filament_engine_flush_and_wait(EngineRef engine);
EntityManagerRef filament_engine_get_entity_manager(EngineRef instance);
///
/// Creates a swap chain against the given surface
///
/// instance - A FILAMENT_HANDLE pointing to an engine instance
/// surface - the OS surface to create a swap chain against
/// flags - swap chain creation flags
///
/// Returns a handle to a swap chain instance
///
SwapChainRef filament_engine_create_swapchain(EngineRef instance, void* surface, long flags);
SwapChainRef filament_engine_create_swapchain_headless(EngineRef instance, int width, int height, long flags);
void filament_destroy_swapchain(SwapChainRef instance);
///
/// View
///
ViewRef filament_engine_create_view(EngineRef engine);
void filament_destroy_view(ViewRef view);
///
/// Renderer
///
RendererRef filament_engine_create_renderer(EngineRef engine);
void filament_destroy_renderer(RendererRef renderer);
///
/// Camera
///
CameraRef filament_engine_create_camera(EngineRef engine, int entity);
CameraRef filament_engine_get_camera_component(EngineRef engine, int entity);
void filament_destroy_camera_component(int entity);
void filament_camera_set_projection(CameraRef camera, int projectionKind, double left, double right, double bottom, double top, double near, double far);
void filament_camera_set_projection_fov(CameraRef camera, double fovInDegrees, double aspect, double near, double far, int direction);
void filament_camera_set_projection_lens(CameraRef camera, double focalLength, double aspect, double near, double far);
void filament_camera_set_scaling(CameraRef camera, double scalingX, double scalingY);
void filament_camera_set_shift(CameraRef camera, double shiftX, double shiftY);