dart/filament/lib/src/generated/native_gen.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Memory helpers
  ffi.Pointer<ffi.Void> filament_allocate(
    int bytes,
  ) {
    return _filament_allocate(
      bytes,
    );
  }

  late final _filament_allocatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int64)>>(
          'filament_allocate');
  late final _filament_allocate =
      _filament_allocatePtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  void filament_free(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _filament_free(
      ptr,
    );
  }

  late final _filament_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'filament_free');
  late final _filament_free =
      _filament_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Engine
  EngineRef filament_create_engine(
    int backend,
  ) {
    return _filament_create_engine(
      backend,
    );
  }

  late final _filament_create_enginePtr =
      _lookup<ffi.NativeFunction<EngineRef Function(ffi.Int32)>>(
          'filament_create_engine');
  late final _filament_create_engine =
      _filament_create_enginePtr.asFunction<EngineRef Function(int)>();

  void filament_destroy_engine(
    EngineRef instance,
  ) {
    return _filament_destroy_engine(
      instance,
    );
  }

  late final _filament_destroy_enginePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(EngineRef)>>(
          'filament_destroy_engine');
  late final _filament_destroy_engine =
      _filament_destroy_enginePtr.asFunction<void Function(EngineRef)>();

  int filament_engine_get_backend(
    EngineRef instance,
  ) {
    return _filament_engine_get_backend(
      instance,
    );
  }

  late final _filament_engine_get_backendPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(EngineRef)>>(
          'filament_engine_get_backend');
  late final _filament_engine_get_backend =
      _filament_engine_get_backendPtr.asFunction<int Function(EngineRef)>();

  void filament_engine_flush_and_wait(
    EngineRef engine,
  ) {
    return _filament_engine_flush_and_wait(
      engine,
    );
  }

  late final _filament_engine_flush_and_waitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(EngineRef)>>(
          'filament_engine_flush_and_wait');
  late final _filament_engine_flush_and_wait =
      _filament_engine_flush_and_waitPtr.asFunction<void Function(EngineRef)>();

  EntityManagerRef filament_engine_get_entity_manager(
    EngineRef instance,
  ) {
    return _filament_engine_get_entity_manager(
      instance,
    );
  }

  late final _filament_engine_get_entity_managerPtr =
      _lookup<ffi.NativeFunction<EntityManagerRef Function(EngineRef)>>(
          'filament_engine_get_entity_manager');
  late final _filament_engine_get_entity_manager =
      _filament_engine_get_entity_managerPtr
          .asFunction<EntityManagerRef Function(EngineRef)>();

  /// Creates a swap chain against the given surface
  ///
  /// instance - A FILAMENT_HANDLE pointing to an engine instance
  /// surface - the OS surface to create a swap chain against
  /// flags - swap chain creation flags
  ///
  /// Returns a handle to a swap chain instance
  SwapChainRef filament_engine_create_swapchain(
    EngineRef instance,
    ffi.Pointer<ffi.Void> surface,
    int flags,
  ) {
    return _filament_engine_create_swapchain(
      instance,
      surface,
      flags,
    );
  }

  late final _filament_engine_create_swapchainPtr = _lookup<
      ffi.NativeFunction<
          SwapChainRef Function(EngineRef, ffi.Pointer<ffi.Void>,
              ffi.Int64)>>('filament_engine_create_swapchain');
  late final _filament_engine_create_swapchain =
      _filament_engine_create_swapchainPtr.asFunction<
          SwapChainRef Function(EngineRef, ffi.Pointer<ffi.Void>, int)>();

  SwapChainRef filament_engine_create_swapchain_headless(
    EngineRef instance,
    int width,
    int height,
    int flags,
  ) {
    return _filament_engine_create_swapchain_headless(
      instance,
      width,
      height,
      flags,
    );
  }

  late final _filament_engine_create_swapchain_headlessPtr = _lookup<
      ffi.NativeFunction<
          SwapChainRef Function(EngineRef, ffi.Int32, ffi.Int32,
              ffi.Int64)>>('filament_engine_create_swapchain_headless');
  late final _filament_engine_create_swapchain_headless =
      _filament_engine_create_swapchain_headlessPtr
          .asFunction<SwapChainRef Function(EngineRef, int, int, int)>();

  void filament_destroy_swapchain(
    SwapChainRef instance,
  ) {
    return _filament_destroy_swapchain(
      instance,
    );
  }

  late final _filament_destroy_swapchainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SwapChainRef)>>(
          'filament_destroy_swapchain');
  late final _filament_destroy_swapchain =
      _filament_destroy_swapchainPtr.asFunction<void Function(SwapChainRef)>();

  /// View
  ViewRef filament_engine_create_view(
    EngineRef engine,
  ) {
    return _filament_engine_create_view(
      engine,
    );
  }

  late final _filament_engine_create_viewPtr =
      _lookup<ffi.NativeFunction<ViewRef Function(EngineRef)>>(
          'filament_engine_create_view');
  late final _filament_engine_create_view =
      _filament_engine_create_viewPtr.asFunction<ViewRef Function(EngineRef)>();

  void filament_destroy_view(
    ViewRef view,
  ) {
    return _filament_destroy_view(
      view,
    );
  }

  late final _filament_destroy_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ViewRef)>>(
          'filament_destroy_view');
  late final _filament_destroy_view =
      _filament_destroy_viewPtr.asFunction<void Function(ViewRef)>();

  /// Renderer
  RendererRef filament_engine_create_renderer(
    EngineRef engine,
  ) {
    return _filament_engine_create_renderer(
      engine,
    );
  }

  late final _filament_engine_create_rendererPtr =
      _lookup<ffi.NativeFunction<RendererRef Function(EngineRef)>>(
          'filament_engine_create_renderer');
  late final _filament_engine_create_renderer =
      _filament_engine_create_rendererPtr
          .asFunction<RendererRef Function(EngineRef)>();

  void filament_destroy_renderer(
    RendererRef renderer,
  ) {
    return _filament_destroy_renderer(
      renderer,
    );
  }

  late final _filament_destroy_rendererPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(RendererRef)>>(
          'filament_destroy_renderer');
  late final _filament_destroy_renderer =
      _filament_destroy_rendererPtr.asFunction<void Function(RendererRef)>();

  /// Camera
  CameraRef filament_engine_create_camera(
    EngineRef engine,
    int entity,
  ) {
    return _filament_engine_create_camera(
      engine,
      entity,
    );
  }

  late final _filament_engine_create_cameraPtr =
      _lookup<ffi.NativeFunction<CameraRef Function(EngineRef, ffi.Int32)>>(
          'filament_engine_create_camera');
  late final _filament_engine_create_camera = _filament_engine_create_cameraPtr
      .asFunction<CameraRef Function(EngineRef, int)>();

  CameraRef filament_engine_get_camera_component(
    EngineRef engine,
    int entity,
  ) {
    return _filament_engine_get_camera_component(
      engine,
      entity,
    );
  }

  late final _filament_engine_get_camera_componentPtr =
      _lookup<ffi.NativeFunction<CameraRef Function(EngineRef, ffi.Int32)>>(
          'filament_engine_get_camera_component');
  late final _filament_engine_get_camera_component =
      _filament_engine_get_camera_componentPtr
          .asFunction<CameraRef Function(EngineRef, int)>();

  void filament_destroy_camera_component(
    int entity,
  ) {
    return _filament_destroy_camera_component(
      entity,
    );
  }

  late final _filament_destroy_camera_componentPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32)>>(
          'filament_destroy_camera_component');
  late final _filament_destroy_camera_component =
      _filament_destroy_camera_componentPtr.asFunction<void Function(int)>();

  void filament_camera_set_projection(
    CameraRef camera,
    int projectionKind,
    double left,
    double right,
    double bottom,
    double top,
    double near,
    double far,
  ) {
    return _filament_camera_set_projection(
      camera,
      projectionKind,
      left,
      right,
      bottom,
      top,
      near,
      far,
    );
  }

  late final _filament_camera_set_projectionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              CameraRef,
              ffi.Int32,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double)>>('filament_camera_set_projection');
  late final _filament_camera_set_projection =
      _filament_camera_set_projectionPtr.asFunction<
          void Function(CameraRef, int, double, double, double, double, double,
              double)>();

  void filament_camera_set_projection_fov(
    CameraRef camera,
    double fovInDegrees,
    double aspect,
    double near,
    double far,
    int direction,
  ) {
    return _filament_camera_set_projection_fov(
      camera,
      fovInDegrees,
      aspect,
      near,
      far,
      direction,
    );
  }

  late final _filament_camera_set_projection_fovPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(CameraRef, ffi.Double, ffi.Double, ffi.Double,
              ffi.Double, ffi.Int32)>>('filament_camera_set_projection_fov');
  late final _filament_camera_set_projection_fov =
      _filament_camera_set_projection_fovPtr.asFunction<
          void Function(CameraRef, double, double, double, double, int)>();

  void filament_camera_set_projection_lens(
    CameraRef camera,
    double focalLength,
    double aspect,
    double near,
    double far,
  ) {
    return _filament_camera_set_projection_lens(
      camera,
      focalLength,
      aspect,
      near,
      far,
    );
  }

  late final _filament_camera_set_projection_lensPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(CameraRef, ffi.Double, ffi.Double, ffi.Double,
              ffi.Double)>>('filament_camera_set_projection_lens');
  late final _filament_camera_set_projection_lens =
      _filament_camera_set_projection_lensPtr.asFunction<
          void Function(CameraRef, double, double, double, double)>();

  void filament_camera_set_scaling(
    CameraRef camera,
    double scalingX,
    double scalingY,
  ) {
    return _filament_camera_set_scaling(
      camera,
      scalingX,
      scalingY,
    );
  }

  late final _filament_camera_set_scalingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(CameraRef, ffi.Double,
              ffi.Double)>>('filament_camera_set_scaling');
  late final _filament_camera_set_scaling = _filament_camera_set_scalingPtr
      .asFunction<void Function(CameraRef, double, double)>();

  void filament_camera_set_shift(
    CameraRef camera,
    double shiftX,
    double shiftY,
  ) {
    return _filament_camera_set_shift(
      camera,
      shiftX,
      shiftY,
    );
  }
